syntax = "proto3";

package foodswipe.v1;

import "buf/validate/validate.proto";
import "food-swipe/v1/common.proto";

message Ingredient {
  uint32 id = 1;
  string name = 2;
}

message Measurement {
  uint32 id = 1;
  string name = 2;
  string abbreviation = 3;
}

message ListMeasurementsRequest {
  uint32 page = 1 [(buf.validate.field).uint32.gte = 1];
  uint32 limit = 2 [(buf.validate.field).uint32.gte = 1, (buf.validate.field).uint32.lte = 100];
  optional string search = 3;
}

message ListMeasurementsResponse {
    foodswipe.v1.Pagination pagination = 1;
    repeated Measurement data = 2;
}

message GetMeasurementRequest {
  uint32 id = 1 [(buf.validate.field).uint32.gte = 1];
}

message GetMeasurementResponse {
  Measurement measurement = 1;
}

message CreateMeasurementRequest {
  string name = 1 [(buf.validate.field).string.min_len = 1];
  string abbreviation = 2 [(buf.validate.field).string.min_len = 1];
}

message CreateMeasurementResponse {
  Measurement measurement = 1;
}

message UpdateMeasurementRequest {
  uint32 id = 1 [(buf.validate.field).uint32.gte = 1];
  string name = 2 [(buf.validate.field).string.min_len = 1];
  string abbreviation = 3 [(buf.validate.field).string.min_len = 1];
}

message UpdateMeasurementResponse {
  Measurement measurement = 1;
}

message DeleteMeasurementRequest {
  uint32 id = 1 [(buf.validate.field).uint32.gte = 1];
}

message DeleteMeasurementResponse {}

message ListIngredientsRequest {
  uint32 page = 1 [(buf.validate.field).uint32.gte = 1];
  uint32 limit = 2 [(buf.validate.field).uint32.gte = 1, (buf.validate.field).uint32.lte = 100];
  optional string search = 3;
}

message ListIngredientsResponse {
    foodswipe.v1.Pagination pagination = 1;
  repeated Ingredient data = 2;
}

message GetIngredientRequest {
  uint32 id = 1 [(buf.validate.field).uint32.gte = 1];
}

message GetIngredientResponse {
  Ingredient ingredient = 1;
}

message CreateIngredientRequest {
  string name = 1 [(buf.validate.field).string.min_len = 1];
}

message CreateIngredientResponse {
  Ingredient ingredient = 1;
}

message UpdateIngredientRequest {
  uint32 id = 1 [(buf.validate.field).uint32.gte = 1];
  string name = 2 [(buf.validate.field).string.min_len = 1];
}

message UpdateIngredientResponse {
  Ingredient ingredient = 1;
}

message DeleteIngredientRequest {
  uint32 id = 1 [(buf.validate.field).uint32.gte = 1];
}

message DeleteIngredientResponse {}

service RecipeService {
  rpc ListMeasurements(ListMeasurementsRequest) returns (ListMeasurementsResponse);
  rpc GetMeasurement(GetMeasurementRequest) returns (GetMeasurementResponse);
  rpc CreateMeasurement(CreateMeasurementRequest) returns (CreateMeasurementResponse);
  rpc UpdateMeasurement(UpdateMeasurementRequest) returns (UpdateMeasurementResponse);
  rpc DeleteMeasurement(DeleteMeasurementRequest) returns (DeleteMeasurementResponse);

  rpc ListIngredients(ListIngredientsRequest) returns (ListIngredientsResponse);
  rpc GetIngredient(GetIngredientRequest) returns (GetIngredientResponse);
  rpc CreateIngredient(CreateIngredientRequest) returns (CreateIngredientResponse);
  rpc UpdateIngredient(UpdateIngredientRequest) returns (UpdateIngredientResponse);
  rpc DeleteIngredient(DeleteIngredientRequest) returns (DeleteIngredientResponse);
}
